example/errors/interpret/multiple_libraries_in_scope.box
add math;

println("st");
add math;
